version 0.9.9 -- UNRELEASED
    backupninja changes
	 . Use locking to avoid running concurrent instances of the same backup
	   action. Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes: #511300)
    handler changes
	dup:
	 . Use --tempdir option rather than TMPDIR environment variable.
	   (Closes Roundup bug #598)
	 . Remove support for duplicity < 0.4.4. Even etch-backports has
	   a newer one.
	ldap:
	 . Fix reliance on bash for pipefail.
	mysql:
	 . Fix reliance on bash for pipefail.
	   Thanks to Sergio Talens-Oliag <sto@debian.org> for the patch.
	   (Closes: #602374)
	postgresql:
	 . Support various pg_dump formats in addition to pg_dumpall.
	   Thanks to Jacob Anawalt <jlanawalt@gmail.com> for the patch.
	   (Closes Roundup bug #2534)
	 . Fix reliance on bash for pipefail.
	rdiff:
	 . Support reading include/exclude patterns from files using the
	   "include @/etc/backup_includes" syntax (Closes Roundup bug
	   #2370). Thanks to ale for the patch.
	rsync:
	 . Fix long rotation.
	 . Make units clearer (Closes Redmine bug #2737)
    helper changes
	dup:
	 . Fix separate signing key usecase. Thanks to Ian Beckwith for
	   the patch.
	 . Make units clearer (Closes Redmine bug #2737)
	rdiff:
	 . Generate 4096 bits RSA keys.
    documentation changes
	 . Recommend using 4096 bits RSA keys everywhere.

version 0.9.8.1 -- October 31, 2010 (boo!)
    backupninja changes
	 . Do not error out when no job is configured. Thanks to Jordi Mallach
	   <jordi@debian.org> for the patch (Closes: #597684)
    handler changes
	sys:
	 . Route around broken vgcfgbackup not able to handle multiple VG arguments

version 0.9.8 -- September 12, 2010
    backupninja changes
	 . Added GZIP_OPTS option, defaulting to --rsyncable, so that this
	   option can be disabled on systems that don't support it. This
	   also allows to use another compression program, such as pbzip2
	   on SMP machines (Closes Roundup bug #2405)
    handler changes
	sys: