@@ -103,7 +103,7 @@ getconf lvm no
 getconf vsnames all
 
 # If vservers are configured, check that the ones listed in $vsnames are running.
-local usevserver=no
+usevserver=no
 if [ $vservers_are_available = yes ]; then
    if [ "$vsnames" = all ]; then
       vsnames="$found_vservers"
